Try `StructuredTaskScope` to use virtual thread pool